<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwipeApplication</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_angular_get_started">AngularJS: Get Started</string>
    <string name="title_c_sharp_fundamentals">C# Fundamentals with C# 5.0</string>
    <string name="title_modern_structured_logging">Modern Structured Logging With Serilog and Seq</string>
    <string name="title_node_application_patterns">Node Application Patterns</string>
    <string name="title_mvc5_fundamentals">ASP.NET MVC 5 Fundamentals</string>
    <string name="title_angular_get_started_short">AngularJS</string>
    <string name="title_c_sharp_fundamentals_short">C#</string>
    <string name="title_modern_structured_logging_short">Logging</string>
    <string name="title_node_application_patterns_short">Node.js</string>
    <string name="title_mvc5_fundamentals_short">MVC 5 </string>
    <string name="desc_angular_get_started">This course demonstrates how to use the essential abstractions of AngularJS, including modules, controllers, directives, and services.</string>
    <string name="desc_c_sharp_fundamentals">C# Fundamentals with C# 5.0 is designed to give you everything you need to become a productive C# developer on the .NET platform.</string>
    <string name="desc_modern_structured_logging">Make your logs work for you and go beyond unstructured textual logs to create modern log information with rich, structured, queryable log data.</string>
    <string name="desc_node_application_patterns">Design and development patterns for building applications in Node.js.</string>
    <string name="desc_mvc5_fundamentals">ASP.NET MVC 5 Fundamentals covers all the new features of ASP.NET MVC 5, as well as the new features for web developers in Visual Studio 2013, including WebApi 2, OWIN, Katana, SignalR, and the Entity Framework version 6.</string>
    <string name="top_card">picture</string>
    <string name="action_view">View</string>
    <string name="action_contents">Contents</string>
    <string name="action_description">Description</string>
    <string name="action_assessment">Assessment</string>
    <string name="action_exercises">Exercises</string>
    <string name="title_activity_course_actions">CourseActionsActivity</string>
    <string name="title_activity_third_layer">ThirdLayer</string>


    <string name="title_sass">Simplifying CSS With Sass</string>
    <string name="title_sass_short">Sass</string>
    <string name="desc_sass">Create more maintainable CSS in less time.</string>
    <string name="title_sql2012_install_and_config">SQL Server 2012: Installation and Configuration</string>
    <string name="title_sql2012_install_and_config_short">sql2012</string>
    <string name="desc_sql2012_install_config">Learn how to correctly install and configure SQL Server 2012, including configuration of Windows and storage for stability and performance, and post-installation updates, configuration, and database maintenance. This course is applicable to anyone who is installing SQL Server for the first time and wants to avoid the common mistakes and pitfalls that are made so often.</string>
    <string name="title_mysql_fundamentals">MySQL Fundamentals</string>
    <string name="title_mysql_fundamentals_short">MySQL</string>
    <string name="desc_mysql_fundamentals">Fundamentals of MySQL, an essential part of the LAMP stack.</string>
    <string name="title_mongodb">Introduction to MongoDB</string>
    <string name="title_mongodb_short">MongoDB</string>
    <string name="desc_mongodb">MongoDB is a very popular NoSQL database that is fast and scalable. This course will get you familiar with this unique database and arm you with the essential skills to start using Mongo to power your software application.</string>
    <string name="title_ef5">Getting Started with Entity Framework 5</string>
    <string name="title_ef5_short">EntityFramework</string>
    <string name="desc_ef5">This course provides an introduction to using Entity Framework 5 with Visual Studio 2012</string>

    <string name="open_drawer_message">Open course categories</string>
    <string name="close_drawer_message">Close course categories</string>

</resources>
