<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_view"
        android:title="@string/action_view"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="always|withText"
        />
    <item android:id="@+id/action_contents"
        android:title="@string/action_contents"
        android:icon="@android:drawable/ic_menu_agenda"
        android:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_description"
        android:title="@string/action_description"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_assessment"
        android:title="@string/action_assessment"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_exercises"
        android:title="@string/action_exercises"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom"
        />
</menu>
